# surreal-rust-esp

./: Cargo.toml  README.md  crt.pem  docker-compose.yml  rust-toolchain.toml  sdkconfig.defaults  spin.sig
.cargo/: config.toml
.circleci/: config.yml
src/: main.rs  wifi.rs
